[build-system]
requires = ["setuptools>=61.0", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_file = "surfalize/_version.py"

[project]
name = "surfalize"
authors = [
    {name = "Frederic Schell", email = "frederic.schell@iws.fraunhofer.de"}
]
dynamic = ["version"]
description = "A python module to analyze surface roughness"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

dependencies = [
    "numpy>=1.18.1",
    "matplotlib>=3.1.1",
    "pandas>=1.0.1",
    "scipy>=1.4.1",
    "tqdm>=4.64.1",
    "openpyxl>=3.1.2",
    "python-dateutil",
    "pillow",
    "chardet",
    "zstandard; python_version < '3.14'"
]

[project.optional-dependencies]
3d = [
    "pyvista",
    "trame",
    "trame-vtk",
    "trame-vuetify",
    "trame-components"
]
doc = [
    "sphinx",
    "numpydoc",
    "furo"
]
tests = [
    "pytest"
]
cli = [
    "click",
    "fpdf2"
]
all = [
    "pyvista",
    "trame",
    "trame-vtk",
    "trame-vuetify",
    "trame-components",
    "sphinx",
    "furo",
    "numpydoc",
    "pytest",
    "click",
    "fpdf2"
]

[project.scripts]
surfalize = "surfalize.cli:cli"

[tool.pytest.ini_options]
filterwarnings = [
    # Several test files genuinely have slightly unequal pixel sizes in x and y, which the Surface constructor
    # warns about by design. This is expected in the test suite, so we silence it here while keeping it active
    # for real users.
    "ignore:The surface has different pixel size in x and y:UserWarning",
]

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ["surfalize*"]
exclude = ["docs*", "tests*"]


